# redis-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/review-branch/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: tests.yml
docs/: PLAN.md  PROJECT_CONTEXT.md
examples/: Dockerfile  async_redis_example.py  memory_cache_example.py  pubsub_example.py  sync_redis_example.py
src/async_redis_client/: __init__.py  crypto.py  errors.py  serialization.py
src/async_redis_client/adapters/: __init__.py
src/async_redis_client/adapters/memory/: __init__.py  _pubsub_hub.py  async_adapter.py  pubsub_async_adapter.py  pubsub_sync_adapter.py  sync_adapter.py
src/async_redis_client/adapters/memory/llm_context/: INDEX.yaml  cache_async.yaml  cache_sync.yaml  pubsub_async.yaml  pubsub_sync.yaml
src/async_redis_client/adapters/redis/: __init__.py  _helpers.py  _pubsub_helpers.py  async_adapter.py  pubsub_async_adapter.py  pubsub_sync_adapter.py  sync_adapter.py
src/async_redis_client/adapters/redis/llm_context/: INDEX.yaml  cache_async.yaml  cache_sync.yaml  pubsub_async.yaml  pubsub_sync.yaml
src/async_redis_client/messaging/: __init__.py  _invoke.py  codec.py  consumer_async.py  consumer_sync.py  producer_async.py  producer_sync.py
src/async_redis_client/ports/: __init__.py  async_cache_port.py  async_pubsub_port.py  cache_port.py  pubsub_port.py  sync_cache_port.py  sync_pubsub_port.py
src/async_redis_client/ports/llm_context/: INDEX.yaml  cache_async.yaml  cache_sync.yaml  pubsub_async.yaml  pubsub_sync.yaml
src/async_redis_client/schemas/: __init__.py  pubsub_message.py
tests/: test_cache_port_compat.py  test_crypto.py  test_memory_async_adapter.py  test_memory_pubsub_adapter.py  test_memory_sync_adapter.py  test_messaging_codec.py  test_messaging_e2e.py  test_messaging_invoke.py  test_messaging_producer_consumer.py  test_package_import.py  test_pubsub_e2e.py  test_pubsub_helpers.py  test_redis_async_adapter.py  test_redis_e2e.py  test_redis_helpers.py  test_redis_pubsub_async_adapter.py  test_redis_pubsub_sync_adapter.py  test_redis_sync_adapter.py  test_serialization.py
