[project]
name = "async-redis-client"
version = "0.1.0"
description = "Hexagonal cache library with sync/async Redis adapters, Fernet encryption, and Pydantic JSON."
readme = "README.md"
authors = [
    { name = "mato777", email = "matias@landjourney.ai" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["redis", "cache", "async", "fernet", "pydantic", "hexagonal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=48.0.0",
    "pydantic>=2.13.4",
    "redis>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/mato777/redis-adapter"
Repository = "https://github.com/mato777/redis-adapter"
Documentation = "https://github.com/mato777/redis-adapter#readme"
Issues = "https://github.com/mato777/redis-adapter/issues"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "fakeredis>=2.35.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.15",
    "taskipy>=1.14.1",
    "testcontainers[redis]>=4.14.2",
    "ty>=0.0.14",
]

[tool.taskipy.tasks]
lint = "uv run ruff check src tests"
format = "uv run ruff format src tests"
format-check = "uv run ruff format --check src tests"
test = "uv run pytest -m \"not e2e\""
test-all = "uv run pytest"
test-cov = "uv run pytest --cov=async_redis_client --cov-report=term-missing --cov-report=html"
install-git-hooks = "git config core.hooksPath .githooks"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "e2e: spins up Redis in Docker via testcontainers",
]

[tool.coverage.run]
source_pkgs = ["async_redis_client"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["async_redis_client"]

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[[tool.ty.overrides]]
include = [
    "src/async_redis_client/adapters/redis/**/*.py",
    "tests/**/*.py",
]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"
unused-ignore-comment = "ignore"
